--- a/static/ctr/style.css
+++ b/static/ctr/style.css
@@ -7,7 +7,7 @@ _width:expression(document.body.clientWidth<900?'900px':(document.body.clientWid
 _text-align:left;
 margin:0px auto 0px auto;padding-top:150px;}
 div#cont{float:left;width:78%;_width:77%;padding-bottom:20px;}
-div#cont div.cont{padding:10px;_padding:0px;}
+div#cont div.cont{padding:0px 10px 0px 0px;_padding:0px;}
 div#rcol{float:right;width:22%;_float:none;_width:auto;margin-bottom:20px;_margin-bottom:1px;}
 div#rcol div.cont{_float:right;_width:22%;padding:10px;}
 div#foot{display:block;clear:both;width:100%;}
@@ -15,6 +15,7 @@ div#foot div.cont{padding:10px 0px 15px 0px;text-align:center;}
 div#foot span{display:block;text-align:center;}
 div#head{position:absolute;left:0px;top:0px;width:100%;height:118px;_height:120px;}
 div#head div#user-box{position:absolute;z-index:1000;top:0px;right:0px;width:22%;text-align:right;}
+div#head div.info-box{padding:22px 0px 0px 0px;}
 div#main-menu{position:absolute;left:0px;top:120px;width:100%;height:30px;}
 div#main-menu ul{list-style-type:none;margin:0px 0px 0px 0px;padding:0px 0px 0px 0px;}
 div#main-menu ul li{display:inline;float:left;_float:none;height:30px;padding:0px 15px 0px 15px;}
@@ -25,15 +26,19 @@ div#main-menu ul li a{float:left;padding-top:7px;}
 #user-menu{width:240px;position:absolute;right:0;top:100px;visibility:hidden;z-index:1200;background:#fff;text-align:left;padding:4px;}
 
 /*elements*/
-h1{margin:0px;font-size:18pt;}
-h2{margin:0px;font-size:16pt;}
-h3{margin:0px;font-size:14pt;}
-h4{margin:0px;font-size:12pt;}
-h5{margin:0px;font-size:10pt;}
+h1{margin:10px 0px 0px 0px;font-size:18pt;}
+h2{margin:10px 0px 0px 0px;font-size:16pt;}
+h3{margin:10px 0px 0px 0px;font-size:14pt;}
+h4{margin:10px 0px 0px 0px;font-size:12pt;}
+h5{margin:10px 0px 0px 0px;font-size:10pt;}
+p{margin:6px 0px 0px 0px;}
 form{margin:0;}
 a,a:hover,a:visited{text-decoration:none;}
 a:hover{text-decoration:underline;}
-input{border:1px solid #333;}
+div.oo-renderer-field{margin-bottom:5px;}
+#openid-login-form label{float:left;clear:both;width:220px;padding-bottom:5px;}
+#openid-login-form label span{float:left;}
+#openid-login-form label input{float:right;}
 
 /*header login form*/
 #openid input{_height:19px;}
