--- a/static/s/style.css
+++ b/static/s/style.css
@@ -18,4 +18,4 @@ div.system h2{border-bottom:1px solid #eeeeff;}
 div.anonce{border-right:1px solid #fff;}
 div.anonce,div.anonce div strong{background-color:#f5f5ff;}
 div.anonce div{background-color:#fff;}
-div.post{border-top:1px solid #eeeeff;}
+div.post,div.comm,div.comms.lined{border-top:1px solid #eeeeff;}
