--- a/static/bases.css
+++ b/static/bases.css
@@ -16,7 +16,7 @@ div#foot div.cont{padding:10px 0px 15px 0px;text-align:center;}
 div#foot span{display:block;text-align:center;}
 div#head{position:absolute;left:0px;top:0px;width:100%;height:118px;_height:120px;}
 div#head div#user-box{position:absolute;z-index:910;top:0px;right:0px;width:22%;text-align:right;}
-div#head div.info-box{padding:22px 0px 0px 0px;}
+div#head div.info-box{padding:22px 14px 0px 0px;}
 div#main-menu{position:absolute;left:0px;top:120px;z-index:50;width:100%;height:30px;}
 div#main-menu ul{list-style-type:none;margin:0px 0px 0px 0px;padding:0px 0px 0px 0px;}
 div#main-menu ul li{display:inline;float:left;_float:none;_height:30px;padding:0px 15px 0px 15px;}
@@ -27,11 +27,11 @@ div#main-menu ul li a{float:left;padding-top:7px;}
 #user-menu{width:240px;position:absolute;right:0;top:100px;visibility:hidden;z-index:900;padding:10px;background:#fff;text-align:left;}
 
 /*elements*/
-h1{margin:10px 0px 0px 0px;font-size:18pt;}
-h2{margin:10px 0px 0px 0px;font-size:16pt;}
-h3{margin:10px 0px 0px 0px;font-size:14pt;}
-h4{margin:10px 0px 0px 0px;font-size:12pt;}
-h5{margin:10px 0px 0px 0px;font-size:10pt;}
+h1{margin:10px 0px 10px 0px;font-size:18pt;}
+h2{margin:10px 0px 10px 0px;font-size:16pt;}
+h3{margin:10px 0px 10px 0px;font-size:14pt;}
+h4{margin:10px 0px 10px 0px;font-size:12pt;}
+h5{margin:10px 0px 10px 0px;font-size:10pt;}
 p{margin:6px 0px 0px 0px;}
 form{margin:0;}
 div.oo-renderer-field{margin-bottom:5px;}
@@ -61,6 +61,14 @@ div.anonce{width:20%;_width:expression((this.parentNode.offsetWidth / 5)+'px');h
 div.anonce div{height:122px;_width:100%;margin:1px 2px 2px 2px;_margin-top:2px;overflow:hidden;padding:5px;}
 div.anonce div strong{display:block;overflow:hidden;padding:2px 0px 3px 0px;text-align:center;}
 div.anonce div.img{text-align:center;}
+
+/*fragments - audioalbum*/
+div.audioalbum{}
+div.audioalbum div.audioplayer{float:left;}
+div.audioalbum div.tracklist{float:left;width:30%;padding-left:10px;}
+div.audioalbum div.tracklist ol{margin:0px 0px 0px 0px;}
+div.audioalbum div.tracklist ol li{*margin-left:40px;white-space:normal;}
+div.audioalbum div.content{clear:both;padding:12px 0px 12px 0px;}
 
 /*blogs*/
 div.o-paginator{margin:10px 0px 0px 0px;}
