--- a/static/bases.css
+++ b/static/bases.css
@@ -77,7 +77,7 @@ div.o-paginator{margin:10px 0px 0px 0px;}
 /*literature*/
 div.time-place{text-align:right;font-style:italic;}
 div.cycle.libro{margin-bottom:25px;}
-div.cycle.libro li{list-style-type:none;display:inline;margin-right:25px;}
+div.cycle.libro li{list-style-type:none;display:inline;margin-right:25px;white-space:nowrap;}
 
 /*comments*/
 div.comm{clear:both;padding:10px 0px 10px 5px;}
