--- a/static/bases.css
+++ b/static/bases.css
@@ -65,6 +65,7 @@ div.anonce.blog div.cnt{text-align:left;}
 div.anonce.im div.cnt{padding-top:5px}
 div.anonce.libro div.cnt{font-style:italic;}
 div.anonce.sound div.cnt{font-style:italic;}
+div.associations{}
 
 /*fragments - audioalbum*/
 div.audioalbum{}
