--- a/static/bases.css
+++ b/static/bases.css
@@ -78,7 +78,7 @@ div.audioalbum div.content{clear:both;padding:12px 0px 12px 0px;}
 
 /*blogs*/
 div.o-paginator{margin:10px 0px 0px 0px;}
-div.post_date{margin-top:-12px;text-align:center;font-size:80%;}
+div.post_date{margin:-14px 0px 14px 0px;text-align:center;font-size:80%;}
 
 /*literature*/
 div.time-place{text-align:right;font-style:italic;}
