--- a/static/bases.css
+++ b/static/bases.css
@@ -14,6 +14,9 @@ div#rcol div.cont{_float:right;_width:22%;padding:10px;}
 div#foot{display:block;clear:both;width:100%;}
 div#foot div.cont{padding:10px 0px 15px 0px;text-align:center;}
 div#foot span{display:block;text-align:center;}
+div#foot div#bot_cnt{text-align:center;height:15px;}
+div#foot div#bot_cnt div#site_cnt{float:right;}
+div#foot div#bot_cnt div#site_sp{float:left;}
 div#head{position:absolute;left:0px;top:0px;width:100%;height:118px;*height:120px;}
 div#head div#user-box{position:absolute;z-index:910;top:0px;right:0px;width:22%;text-align:right;}
 div#head div.info-box{padding:22px 14px 0px 0px;}
