--- a/static/bases.css
+++ b/static/bases.css
@@ -12,11 +12,11 @@ div#cont div.cont{padding:0px 10px 0px 15px;_padding:0px 0px 0px 15px;}
 div#rcol{float:right;width:22%;_float:none;_width:auto;margin-bottom:20px;_margin-bottom:1px;}
 div#rcol div.cont{_float:right;_width:22%;padding:10px;}
 div#foot{display:block;clear:both;width:100%;}
-div#foot div.cont{padding:10px 0px 15px 0px;text-align:center;}
+div#foot div.cont{padding:10px 0px 5px 0px;text-align:center;}
 div#foot span{display:block;text-align:center;}
 div#foot div#bot_cnt{text-align:center;}
-div#foot div#bot_cnt div#site_cnt{font-size:10px;}
-div#foot div#bot_cnt div#site_sp{}
+div#foot div#bot_cnt div#site_cnt{display:inline;margin-right:15px;}
+div#foot div#bot_cnt div#site_sp{display:inline;font-size:10px;}
 div#head{position:absolute;left:0px;top:0px;width:100%;height:118px;*height:120px;}
 div#head div#user-box{position:absolute;z-index:910;top:0px;right:0px;width:22%;text-align:right;}
 div#head div.info-box{padding:22px 14px 0px 0px;}
