--- a/static/bases.css
+++ b/static/bases.css
@@ -14,7 +14,7 @@ div#rcol div.cont{_float:right;_width:22%;padding:10px;}
 div#foot{display:block;clear:both;width:100%;}
 div#foot div.cont{padding:10px 0px 5px 0px;text-align:center;}
 div#foot span{display:block;text-align:center;}
-div#foot div#bot_cnt{text-align:center;}
+div#foot div#bot_cnt{padding-top:8px;text-align:center;}
 div#foot div#bot_cnt div#site_cnt{display:inline;margin-right:15px;}
 div#foot div#bot_cnt div#site_sp{display:inline;font-size:10px;}
 div#head{position:absolute;left:0px;top:0px;width:100%;height:118px;*height:120px;}
