--- a/static/bases.css
+++ b/static/bases.css
@@ -85,7 +85,7 @@ div.o-paginator{clear:both;padding:10px 0px 0px 0px;}
 div.post_date{margin:-14px 0px 14px 0px;text-align:center;font-size:80%;}
 
 /*literature*/
-div.time-place{text-align:right;font-style:italic;}
+div.time-place{text-align:right;font-size:70%;font-style:italic;}
 div.cycle.libro{margin-bottom:25px;}
 div.cycle.libro li{list-style-type:none;display:inline;margin-right:25px;white-space:nowrap;}
 
