--- a/static/bases.css
+++ b/static/bases.css
@@ -132,3 +132,21 @@ div.oo-renderer-field,div.oo-renderer-buttons{clear:both;margin:0px 0px 12px 0px
 div.oo-renderer-title{float:left;width:150px;text-align:right;padding:2px 10px 0px 0px;}
 div.oo-renderer-field select,div.oo-renderer-field input.file,div.oo-renderer-field input.text{width:250px;}
 div.oo-renderer-field div.oo-renderer-error{clear:both;padding:3px 0px 3px 0px;color:#ff5555;font-weight:bold;}
+
+div.form-row{clear:both;width:100%;}
+div.form-row.form-row-v{text-align:left;}
+div.form-row.form-row-h{text-align:left;}
+div.form-row div.form-row-title{}
+div.form-row.form-row-h div.form-row-title{float:left;width:200px;text-align:right;}
+div.form-row div.form-row-content{}
+div.form-row div.form-row-error{}
+div.form-row div.form-row-remark{}
+div.form-row div.form-row-buttons{text-align:center;}
+div.form-row input.form-button{}
+div.form-row input.form-datetime{}
+div.form-row input.form-file{width:250px;}
+div.form-row select.form-select{width:250px;}
+div.form-row select.form-select option{}
+div.form-row input.form-string{width:250px;}
+div.form-row textarea.form-text{}
+div.form-row textarea.fckeditor{}
