--- a/static/bases.css
+++ b/static/bases.css
@@ -136,7 +136,7 @@ div.oo-renderer-field div.oo-renderer-error{clear:both;padding:3px 0px 3px 0px;c
 div.form-row{clear:both;margin:0px 0px 5px 0px;padding:3px 5px 3px 5px;background-color:#fbfbff;}
 div.form-row.form-row-v{text-align:left;}
 div.form-row.form-row-h{text-align:left;}
-div.form-row div.form-row-title{}
+div.form-row div.form-row-title{font-weight:bold;}
 div.form-row.form-row-h div.form-row-title{float:left;width:150px;text-align:right;padding:2px 10px 0px 0px;}
 div.form-row div.form-row-content{}
 div.form-row div.form-row-error{}
